[Modfied] OC-160 #comment minor changes #time 1h

--- a/src/frontend/app/themes/other/layout/_footer.scss
+++ b/src/frontend/app/themes/other/layout/_footer.scss
@@ -40,4 +40,6 @@
   height: 40px;
   float: right;
   background: url("../../../../img/logo2.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
