--- a/src/frontend/app/themes/default/general/list_of_components.scss
+++ b/src/frontend/app/themes/default/general/list_of_components.scss
@@ -114,6 +114,8 @@
   font-family: $FONT_FAMILY;
   float: right;
   margin-top: 5px;
+  transform-origin: 90% 25%;
+  transition: all 0.1s;
 }
 
 .avatar{
