[Modified] OC-210 #comment minor changes #time 2h

--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -818,6 +818,9 @@
   transform-origin: center right;
   transform: rotate(270deg);
   right: 15px;
+  div{
+    transform: rotate(180deg);
+  }
 }
 
 .form_connector_invoker_opened{
@@ -833,6 +836,9 @@
   @extend .form_connector_invoker_opened;
   transform: rotate(360deg);
   right: 0;
+  div{
+    transform: rotate(0deg);
+  }
 }
 
 .operation_item_tabs{
