[Modified] OC-210 #comment minor changes #time 4h

--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -744,6 +744,14 @@
   white-space: nowrap;
 }
 .operator_close_menu_edit{
+  position: absolute;
+  cursor: pointer;
+  top: 3px;
+  right: 0;
+  color: black;
+  font-size: $FONT_SIZE_SMALL;
+}
+.body_close_menu_edit{
   position: sticky;
   cursor: pointer;
   top: 3px;
