--- a/src/frontend/app/themes/default/layout/header.scss
+++ b/src/frontend/app/themes/default/layout/header.scss
@@ -130,3 +130,19 @@
 .left_icon{
   margin-top: -5px;
 }
+.my_profile_header{
+  padding: 8px 10px;
+  a{
+    span{
+      line-height: 35px;
+    }
+  }
+}
+.logout_header{
+  padding: 8px 10px;
+  a{
+    span{
+      line-height: 35px;
+    }
+  }
+}
