[Added] OC-160 #comment cleaning and refactoring layout #time 4h

--- a/src/frontend/app/themes/default/layout/header.scss
+++ b/src/frontend/app/themes/default/layout/header.scss
@@ -52,7 +52,7 @@
 
 .loading{
   height: 15px;
-  background: gray;
+  background: #c2c2c2;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   float: left;
@@ -60,7 +60,7 @@
 
 .loading_icon{
   height: 15px;
-  background: gray;
+  background: #c2c2c2;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   float: left;
