--- a/src/frontend/app/themes/default/layout/login.scss
+++ b/src/frontend/app/themes/default/layout/login.scss
@@ -29,6 +29,9 @@
   border: 1px solid #f7f7f7;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  .login{
+    position: relative;
+  }
   .caption{
     font-family: $FONT_FAMILY;
     font-size: $FONT_SIZE_MEDIUM;
