[Added] OC-160 #comment minor changes #time 5m

--- a/src/frontend/app/themes/default/content/schedules/schedules.scss
+++ b/src/frontend/app/themes/default/content/schedules/schedules.scss
@@ -244,7 +244,7 @@
 
 .progress_bar{
   top: -8px;
-  height: 33px;
+  height: 33px !important;
   margin-bottom: 10px;
   border-radius: .25rem;
   float: left;
