--- a/src/frontend/app/themes/default/constants.scss
+++ b/src/frontend/app/themes/default/constants.scss
@@ -34,9 +34,20 @@ $ANIMATION_BOUNCE_OUT_RIGHT: bounceOutRight;
 
 $ANIMATION_FADE_IN_RIGHT: fadeInRight;
 $ANIMATION_FADE_IN_LEFT: fadeInLeft;
+$ANIMATION_FADE_IN_DOWN: fadeInDown;
 $ANIMATION_FADE_OUT_LEFT: fadeOutLeft;
 $ANIMATION_FADE_OUT_RIGHT: fadeOutRight;
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0);
+  }
 
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
 @keyframes bounceInRight {
   from,
   60%,
