--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -37,6 +37,18 @@
   box-shadow: 0 4px 2px rgba(0,0,0,0.12), 0 3px 10px rgba(0,0,0,0.24);
 }
 
+.item_toggle_in{
+  animation-name: $ANIMATION_FADE_IN_DOWN;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
+}
+
+.item_toggle_out{
+  animation-name: $ANIMATION_FADE_OUT_UP;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
+}
+
 .item_delete_button{
   cursor: pointer;
   position: absolute;
@@ -110,6 +122,7 @@
 }
 
 .operator{
+  text-align: center;
   margin-top: 15px;
   font-family: $FONT_FAMILY;
   position: relative;
@@ -121,6 +134,21 @@
     cursor: pointer;
     top: 2px;
   }
+}
+.toggle_panel{
+  position: relative;
+}
+.toggle_icon{
+  cursor: pointer;
+  width: 20px;
+  text-align: left;
+  float: left;
+}
+.more_icon{
+  cursor: pointer;
+  width: 20px;
+  text-align: left;
+  margin-left: -20px;
 }
 
 .method_item_menu{
