[Modfied] OC-160 #comment minor improvements #time 15m

--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -776,7 +776,7 @@
   position: fixed;
   top: 270px;
   cursor: pointer;
-  background: #e1e1e1;
+  background: #f7f7f7;
   padding: 2px 6px;
   border-radius: 3px;
   transform: perspective(1px) translateZ(0);
