--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -869,6 +869,16 @@
   cursor: pointer;
 }
 
+.history_label{
+  cursor: default;
+  position: absolute;
+  top: -50px;
+  .colon{
+    display: block;
+    float: right;
+    margin-right: 5px;
+  }
+}
 .operators_history{
   position: absolute;
   top: -55px;
@@ -876,7 +886,8 @@
   margin: 2px 0;
   white-space: nowrap;
   overflow-x: auto;
-  width: 89%;
+  width: 79%;
+  right: 10%;
   .history_element{
     cursor: pointer;
     display: inline-block;
