[Mergin]OC-244 #comment merging with backend and mapping #time 4h

--- a/src/frontend/app/themes/default/content/schedules/schedules.scss
+++ b/src/frontend/app/themes/default/content/schedules/schedules.scss
@@ -634,3 +634,13 @@
   width: 14px;
   height: 14px;
 }
+.notifications_loading{
+  min-height: 0 !important;
+  display: inline-block;
+  margin-top: 0 !important;
+}
+.notifications_loading>div{
+  width: 20px;
+  height: 20px;
+  display: inline-flex;
+}
