--- a/src/frontend/styles/app.css
+++ b/src/frontend/styles/app.css
@@ -96,3 +96,13 @@ textarea{
 #atlwdg-trigger{
   top: 15% !important;
 }
+
+.clearfix:before,
+.clearfix:after {
+  content: ".";
+  display: block;
+  height: 0;
+  overflow: hidden;
+}
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; }
