--- a/src/frontend/app/themes/default/general/change_component.scss
+++ b/src/frontend/app/themes/default/general/change_component.scss
@@ -919,6 +919,23 @@
     font-size: $FONT_SIZE_14;
   }
 }
+.items_top_limit{
+  top: -25px;
+  position: absolute;
+  width: 310px;
+  background: white;
+  z-index: 100;
+  left: 0;
+}
+
+.items_bottom_limit{
+  position: absolute;
+  width: 310px;
+  background: white;
+  z-index: 100;
+  bottom: 90px;
+  left: 8px;
+}
 
 .items{
   position: relative;
@@ -927,7 +944,7 @@
 .items_arrows{
   position: absolute;
   left: -30px;
-  top: 40%;
+  top: 50px;
 }
 .items_navigation_bar{
   margin: 0 2px;
@@ -1098,4 +1115,24 @@
       padding: 8px 12px;
     }
   }
+}
+.operation_item_header_arrow{
+  position: absolute;
+  top: 100px;
+  left: -15px;
+}
+.operation_item_header_arrow_prev{
+  display: block;
+  cursor: pointer;
+}
+.operation_item_header_arrow_next{
+  cursor: pointer;
+}
+.operation_item_header_arrow_disable{
+  cursor: default;
+  color: #eee;
+}
+.operation_item_header_appear{
+  animation-name: $ANIMATION_FADE_IN_DOWN;
+  animation-duration: .3s;
 }
