--- a/src/frontend/app/themes/default/general/form_methods.scss
+++ b/src/frontend/app/themes/default/general/form_methods.scss
@@ -20,7 +20,6 @@
   font-family: $FONT_FAMILY;
   font-size: $FONT_SIZE_SMALL;
   margin-top: 15px;
-  width: auto !important;
   overflow: initial !important;
   .remove{
     color: #000000;
@@ -35,6 +34,11 @@
 .item:hover{
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   box-shadow: 0 4px 2px rgba(0,0,0,0.12), 0 3px 10px rgba(0,0,0,0.24);
+}
+
+.method_placeholder{
+  min-height: 73.8px;
+  width: 100%;
 }
 
 .item_toggle_in{
@@ -144,7 +148,7 @@
 }
 .toggle_panel{
   text-align: center;
-  position: relative;
+  position: absolute;
 }
 .toggle_icon{
   cursor: pointer;
@@ -736,7 +740,7 @@
 .if_placeholder{
   width: 85%;
   float: left;
-  padding: 6px 5px;
+  padding: 10px 5px;
   margin-left: 4px;
   display: flex;
 }
@@ -808,7 +812,7 @@
 .loop_placeholder{
   width: 85%;
   float: left;
-  padding: 6px 5px;
+  padding: 10px 5px;
   margin-left: 4px;
 }
 .loop_placeholder_title{
